--- a/amazon.html
+++ b/amazon.html
@@ -56,7 +56,6 @@
       </div>
     </div>
     <script src="data/products.js"></script>
-    <script src="data/cart.js"></script>
-    <script src="amazon.js"></script>
+    <script type="module" src="amazon.js"></script>
   </body>
 </html>
