--- a/amazon.html
+++ b/amazon.html
@@ -4,8 +4,8 @@
     <title>Amazon Project</title>
 
     <!--This code is needed for responsive design to work.
-      (Responsive design = make the website looK good on
-      smaller screen sizes like a phone or a tablet). -->
+      (Responsive designlooK good on
+      smaller screen -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Load a font called Roboto from Google Fonts. -->
