Delete products from cart when clicking delete

--- a/amazon.html
+++ b/amazon.html
@@ -3,9 +3,6 @@
   <head>
     <title>Amazon Project</title>
 
-    <!--This code is needed for responsive design to work.
-      (Responsive designlooK good on
-      smaller screen -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Load a font called Roboto from Google Fonts. -->
@@ -56,6 +53,6 @@
       </div>
     </div>
     
-    <script type="module" src="amazon.js"></script>
+    <script type="module" src="scriptss/amazon.js"></script>
   </body>
 </html>
