--- a/checkout.html
+++ b/checkout.html
@@ -81,7 +81,7 @@
       </div>
     </div>
 
-    <script type = "module" src="data/checkout.js "></script>
+    <script type = "module" src="scriptss/checkout.js "></script>
 
   </body>
 </html>
